prod_snapshot_2015-09-24_1030/objects/Order_Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>FSI_Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flyer_Date__c</fullName>
        <inlineHelpText>Cannot schedule until 30 days out from date of sale
Must schedule all flyers in one drop</inlineHelpText>
        <label>Flyer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flyer_Direct_Response_Template__c</fullName>
        <label>Direct Response Template</label>
        <picklist>
            <controllingField>Direct_Response_Size__c</controllingField>
            <picklistValues>
                <fullName>F4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flyer_Event_Template__c</fullName>
        <label>Event Template</label>
        <picklist>
            <picklistValues>
                <fullName>F1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency?</label>
        <picklist>
            <picklistValues>
                <fullName>8x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10x</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_E_mail_Blast_Quanitity_2__c</fullName>
        <label>Geo E-mail Blast Quantity</label>
        <picklist>
            <controllingField>Targeting_2__c</controllingField>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,501 - 3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,001 - 4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4,001 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,001 - 6,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6,001 - 7,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7,001 - 8,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8, 001 - 9,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9,001 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001 - 150,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_E_mail_Blast_Quantity__c</fullName>
        <label>Geo E-mail Blast Quantity</label>
        <picklist>
            <controllingField>Targeting__c</controllingField>
            <picklistValues>
                <fullName>0 - 2,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2,501 - 3,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3,001 - 4,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4,001 - 5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5,001 - 6,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6,001 - 7,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7,001 - 8,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8,001 - 9,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9,001 - 50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,001 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,001 - 150,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography_PPC_2__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HTML_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this e-mail need to be converted to HTML?</description>
        <label>HTML Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTML_Creative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Creative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <inlineHelpText>Be as specific as possible. Suggesting designer use art from website is not enough – provide detailed instructions of exactly which art, logo’s, etc..</inlineHelpText>
        <label>Headline</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impression_Delivery__c</fullName>
        <label>Impression Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impressions_2__c</fullName>
        <label>Impressions</label>
        <picklist>
            <picklistValues>
                <fullName>50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <inlineHelpText>150K impressions must be run all in 1 month 
Cannot run in same month as flyer</inlineHelpText>
        <label>Impressions</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Date__c</fullName>
        <formula>IF(NOT(ISNULL(Start_Week_18__c)),Start_Week_18__c, IF(NOT(ISNULL(Start_Week_17__c)),Start_Week_17__c, IF(NOT(ISNULL(Start_Week_16__c)),Start_Week_16__c, IF(NOT(ISNULL(Start_Week_15__c)),Start_Week_15__c, IF(NOT(ISNULL(Start_Week_14__c)),Start_Week_14__c, IF(NOT(ISNULL(Start_Week_13__c)),Start_Week_13__c, IF(NOT(ISNULL(Start_Week_12__c)),Start_Week_12__c, IF(NOT(ISNULL(Start_Week_11__c)),Start_Week_11__c, IF(NOT(ISNULL(Start_Week_10__c)),Start_Week_10__c, IF(NOT(ISNULL(Start_Week_9__c)),Start_Week_9__c, IF(NOT(ISNULL(Start_Week_8__c)),Start_Week_8__c,IF(NOT(ISNULL(Start_Week_7__c)),Start_Week_7__c,IF(NOT(ISNULL(Start_Week_6__c)),Start_Week_6__c,IF(NOT(ISNULL(Start_Week_5__c)),Start_Week_5__c,IF(NOT(ISNULL(Start_Week_4__c)),Start_Week_4__c,IF(NOT(ISNULL(Start_Week_3__c)),Start_Week_3__c,IF(NOT(ISNULL(Start_Week_2__c)),Start_Week_2__c,IF(NOT(ISNULL(Start_Week_1__c)),Start_Week_1__c,DATE(1900,1,1)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map_Geography_Type__c</fullName>
        <label>Geography Type</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map_Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Map_Theme_2__c</fullName>
        <label>Map Theme</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Map_Theme__c</fullName>
        <label>Map Theme</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Merge_and_de_dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge and de-dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_10_Zone__c</fullName>
        <label>Month 10 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East &amp; B/W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West &amp; B/W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_1_Zone__c</fullName>
        <label>Month 1 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herald Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herald/Indianola Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks &amp; Non-Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Month_2_Zone__c</fullName>
        <label>Month 2 Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1/20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 6/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 12/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clive/Waukee/West Des Moines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Johnston/Urbandale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankeny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines East/North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Des Moines South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herald Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herald/Indianola Tribune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excl Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sparks &amp; Non-Sparks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Butler/Warren</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Zone__c</fullName>
        <label>Monthly Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Chandler/Tempe/Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert/Queen Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale/Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun City/Surprise/West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OS_Biz_Profile_w_o_Call_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OS Biz Profile w/o Call Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Copy__c</fullName>
        <inlineHelpText>Be as specific as possible. Suggesting designer use art from website is not enough – provide detailed instructions of exactly which art, logo’s, etc..</inlineHelpText>
        <label>Offer/Copy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Order_Days__c</fullName>
        <formula>IF(

OR(

ISPICKVAL(Order_Entry_Status__c ,&quot;New/Pending&quot;),
ISPICKVAL(Order_Entry_Status__c,&quot;In Process&quot;)

),

TODAY()-  DATEVALUE(CreatedDate) - 2*( floor((TODAY() - DATE(2009, 9, 14))/7) - floor((DATEVALUE(CreatedDate)  - DATE(2009, 9, 14))/7) )








,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Order Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Schedule_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Entry_Status__c</fullName>
        <label>Order Entry Status</label>
        <picklist>
            <picklistValues>
                <fullName>New/Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered/Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Requirements__c</fullName>
        <inlineHelpText>i.e. color preferences, font type, always wants logo on ad, etc.</inlineHelpText>
        <label>Other Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paid_Geography_Type__c</fullName>
        <label>Geography Type</label>
        <picklist>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_Geography__c</fullName>
        <label>Geography</label>
        <picklist>
            <controllingField>Map_Geography_Type__c</controllingField>
            <picklistValues>
                <fullName>Ahwatukee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glendale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pinal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_Search_Keyword_2__c</fullName>
        <label>Paid Search Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid_Search_Keyword__c</fullName>
        <label>Paid Search Keyword</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proof_Req_Date__c</fullName>
        <inlineHelpText>Allow 48 hours</inlineHelpText>
        <label>Proof Req. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proxy_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proxy Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROP_Reminder_1__c</fullName>
        <label>ROP Reminder 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROP_Reminder_2__c</fullName>
        <label>ROP Reminder 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROP_Reminder_3__c</fullName>
        <label>ROP Reminder 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Email__c</fullName>
        <label>Reporting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Restaurant__c</fullName>
        <label>Restaurant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_Date_1__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Date_2__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Date_3__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Date_Cal__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Run_Date_ROP__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
</CustomObject>